[project]
name = "arxiv-insight-mcp"
version = "0.1.0"
description = "An MCP server for searching, reading, and analyzing arXiv papers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "mcp[cli]>=1.25.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "httpx>=0.27.0",
]

